--- a/development.ipynb
+++ b/development.ipynb
@@ -28,6 +28,7 @@
    "source": [
     "from jiosaavn import JiosaavnDownload\n",
     "saavn = JiosaavnDownload(final_location=r'Y:\\Music')\n",
+    "saavn.GOTIFY_CHANNEL = \"Media\"\n",
     "saavn.playlist(id = 109815423, debug_only=False)\n",
     "\n",
     "playlists = [\n",
@@ -64,7 +65,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.7"
   },
   "orig_nbformat": 4
  },
