--- a/development.ipynb
+++ b/development.ipynb
@@ -47,6 +47,50 @@
     "for playlist in playlists:\n",
     "    saavn.playlist(id=playlist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "20241223-143457-INFO: SaavnMe Instance Initialized\n",
+      "20241223-143457-INFO: Jiosaavn Module Initialized\n",
+      "20241223-143457-INFO: C:\\Users\\rpakishore\\Documents\\GitHub\\JiosaavnDownloader\\config.toml\n",
+      "20241223-143457-INFO: Accessing database file at database.pkl\n",
+      "20241223-143457-INFO: Final destination set to Y:\\Music\n",
+      "20241223-143457-INFO: Cache file created\n",
+      "20241223-143457-INFO: Initialized Cache Object at database.pkl\n",
+      "20241223-143457-INFO: Extracting Song from URL: https://www.jiosaavn.com/song/anbay/BxlcAiFYBlQhttps://www.jiosaavn.com/song/nadhiyae-theemthanana/BwRfdjlBY2w\n",
+      "20241223-143511-INFO: Download completed (6.27 MB) in 10.1 sec(s) at 0.6 MB/s\n",
+      "20241223-143512-INFO: Metadata written for Nadhiyae (Theemthanana)\n",
+      "20241223-143515-INFO: Extracting Song from URL: https://www.jiosaavn.com/song/nilamay-poru-nilamay-land/Nj4CcxhKR2o\n",
+      "20241223-143524-INFO: Download completed (4.96 MB) in 8.6 sec(s) at 0.6 MB/s\n",
+      "20241223-143524-INFO: Metadata written for Nilamay Poru Nilamay (Land)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Initialize\n",
+    "from jiosaavn import JiosaavnDownload\n",
+    "from jiosaavn.API import SaavnMe\n",
+    "\n",
+    "#Choose the database filepath & Final music location\n",
+    "saavn = JiosaavnDownload(cache_filepath='database.pkl', final_location='Y:\\\\Music')\n",
+    "#Choose downloader\n",
+    "saavn.set_downloader(downloader=SaavnMe())\n",
+    "\n",
+    "url = [\n",
+    "    'https://www.jiosaavn.com/song/anbay/BxlcAiFYBlQ'\n",
+    "    'https://www.jiosaavn.com/song/nadhiyae-theemthanana/BwRfdjlBY2w',\n",
+    "    'https://www.jiosaavn.com/song/nilamay-poru-nilamay-land/Nj4CcxhKR2o'\n",
+    "]\n",
+    "for each in url:\n",
+    "    saavn.song(url=each, skip_downloaded=True)"
+   ]
   }
  ],
  "metadata": {
@@ -65,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
